<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/screenPadding">

    <include
        android:id="@+id/logo"
        layout="@layout/part_logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTextView"
        style="@style/ScreenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/results"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <TableLayout
        android:id="@+id/resultsTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/doneButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView">

        <TableRow>
            <TextView
                style="@style/TextHint"
                android:layout_marginTop="12dp"
                android:text="@string/first_name"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/firstNameTextView"
                style="@style/TextHint"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:textColor="@color/primaryText"
                android:textSize="16sp"
                tools:text="Ivan" />
        </TableRow>

        <TableRow>
            <TextView
                style="@style/TextHint"
                android:layout_marginTop="12dp"
                android:text="@string/last_name"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/lastNameTextView"
                style="@style/TextHint"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:textColor="@color/primaryText"
                android:textSize="16sp"
                tools:text="Ivanov" />
        </TableRow>

        <TableRow>
            <TextView
                style="@style/TextHint"
                android:layout_marginTop="12dp"
                android:text="@string/group"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/groupTextView"
                style="@style/TextHint"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:textColor="@color/primaryText"
                android:textSize="16sp"
                tools:text="KI-101" />
        </TableRow>

        <TableRow>
            <TextView
                style="@style/TextHint"
                android:layout_marginTop="12dp"
                android:text="@string/variant"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/variantTextView"
                style="@style/TextHint"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:textColor="@color/primaryText"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="2" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxWidth="200dp"
        android:textColor="@color/error"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/resultsTable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/resultsTable"
        tools:text="Error"
        tools:visibility="visible" />

    <Button
        android:id="@+id/doneButton"
        style="@style/PrimaryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resultsTable" />

    <Button
        android:id="@+id/tryAgainButton"
        style="@style/PrimaryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/try_again"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resultsTable"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>